k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: isitup-org
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: isitup-org
      app.kubernetes.io/part-of: isitup-org
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: isitup-org
        app.kubernetes.io/part-of: isitup-org
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - isitup-org
                topologyKey: kubernetes.io/hostname
      containers:
        - name: isitup-org
          image: docker.pkg.github.com/sjparkinson/isitup.org/isitup.org:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 40m
              memory: 60Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            timeoutSeconds: 3
      imagePullSecrets:
        - name: github
