k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: isitup-org
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: isitup-org
    app.kubernetes.io/part-of: isitup-org
