k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: isitup-org-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: isitup-org
spec:
  rules:
    - host: isitup.org
      http:
        paths:
          - backend:
              serviceName: isitup-org
              servicePort: 80
